[package]
name = "eliquarre"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
linfa = "0.7.0"
linfa-logistic = { version = "0.7.0", features = ["serde"] }
ndarray = "0.15.6"
rand = "0.8.5"
serde = { version = "1.0.196", features = ["derive"] }
serde-jsonlines = "0.5.0"
serde_json = "1.0.113"
